# quickwidget_blocks_the_event_loop

./: CMakeLists.txt  widget.cpp  widget.h
